# galileo

./: .replit  README.md  pyproject.toml
.github/: config.yml  requirements.txt
.github/app/: app.py  models.py  settings.py
.github/app/templates/: index.html
